<resources>
    <string name="app_name">Time attendance</string>
    <string name="wrong_username_password">Email or password you entered is not correct</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="password_tw">Password</string>
    <string name="email_tw">E-mail</string>
    <string name="username">Username</string>
    <string name="name_tw">Name</string>
    <string name="surname_tw">Surname</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_all_bookings">AllBookingsActivity</string>
    <string name="title_activity_new_clocking">New clocking</string>


    <string name="menu_new_clocking">New clocking</string>
    <string name="menu_home_page">Home page</string>
    <string name="menu_all_bookings">All entries</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_backup">Backups</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_utilities">Utilities</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_backup">BackupActivity</string>

    <string name="wait_for_location">Wait for location</string>
    <string name="new_event">New clocking</string>
    <string name="upload_backup">Upload backup</string>
    <string name="download_backup">Download backup</string>
    <string name="server_address">Server address</string>
    <string name="sound_recording">How often would you like to record sound (in minutes)</string>
    <string name="length_sound_recording">How long would you like to take sound (in seconds)</string>
    <string name="save">Save</string>


    <string name="time_recording_seconds">time_recording_seconds</string>
    <string name="time_notification_minutes">time_notification_minutes</string>



    <string name="google_app_id">775389483706</string>


    <string-array name="possible_access">
        <item>Arrival</item>
        <item>Departure</item>
        <item>Lunch departure</item>
        <item>Lunch arrival</item>
    </string-array>

</resources>
