<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main_page"
            android:icon="@drawable/ic_main_page"
            android:title="@string/menu_home_page"/>
        <item
            android:id="@+id/nav_clocking"
            android:icon="@drawable/ic_alarm_black_24dp"
            android:title="@string/menu_new_clocking"/>
        <item
            android:id="@+id/nav_all_bookings"
            android:icon="@drawable/ic_timeline_black_24dp"
            android:title="@string/menu_all_bookings"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings"/>
    </group>

    <item android:title="@string/menu_utilities">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_backup"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_clear_black_24dp"
                android:title="@string/menu_logout"/>
        </menu>
    </item>

</menu>
