<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/username_tw"
        android:padding="5dp"
        android:layout_weight="1"
        android:hint="@string/username"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_tw"
        android:layout_weight="1"
        android:padding="5dp"
        android:hint="@string/password_tw"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Space
            android:layout_width="70dp"
            android:layout_height="match_parent"
            />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:id="@+id/login_button"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:onClick="loginButtonClicked"/>

        <Space
            android:layout_width="70dp"
            android:layout_height="match_parent"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Space
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            android:id="@+id/register_button"
            android:layout_gravity="center_horizontal"
            android:layout_weight="70.80"
            android:onClick="registerButtonClicked"/>

        <Space
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/error_tw"
        android:layout_weight="1"
        android:visibility="invisible"
        android:textColor="#f20000"
        android:text="@string/wrong_username_password"
        android:textStyle="italic"
        android:singleLine="false"
        android:gravity="center_vertical|center_horizontal"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="11"/>

</LinearLayout>